force-app/main/default/objects/UserActionLog__c/UserActionLog__c.object-meta.xml
<CustomObject>
    <description>Object to log user actions in the UI</description>
    <label>User Action Log</label>
    <nameField>
        <displayFormat>UAL-{0000}</displayFormat>
        <label>User Action Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>