force-app/main/default/objects/UserActionLog__c/fields/ActionDetails__c.field-meta.xml
<CustomField>
    <fullName>ActionDetails__c</fullName>
    <description>Details of the user action performed in the UI</description>
    <inlineHelpText>Record the details of the user action including what was clicked, viewed, or modified</inlineHelpText>
    <label>Action Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>