force-app/main/default/objects/UserActionLog__c/fields/ActionTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ActionTimestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time when the user action was performed</description>
    <label>Action Timestamp</label>
    <type>DateTime</type>
</CustomField>