force-app/main/default/objects/UserActionLog__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>ID of the record related to this user action</description>
    <inlineHelpText>The Salesforce ID of the record that this action was performed on</inlineHelpText>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>