force-app/main/default/objects/UserActionLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed the action</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserActionLogs</relationshipName>
    <type>Lookup</type>
</CustomField>